:bomb: breaking, no longer hide-invisible

--- a/styles/git-diff-details.less
+++ b/styles/git-diff-details.less
@@ -3,19 +3,12 @@
 
 // Less mixins
 //--------------
-.hide-invisibles () {
-  .invisible-character {
-    opacity: 0;
-  }
-}
-
 .git-diff-style(@diff-color) {
   background-color: @diff-color !important;
   color: black !important;
   span {
     color: black !important;
   }
-  .hide-invisibles();
 }
 //---------------
 
@@ -23,7 +16,6 @@ atom-text-editor {
   .line {
     &.git-diff-details-new-highlighted {
       background-color: rgba(162, 232, 120, 0.1) !important;
-      .hide-invisibles();
     }
     &.git-diff-details-new-flat {
       .git-diff-style(rgba(162, 232, 120, 0.7));
@@ -43,7 +35,7 @@ atom-text-editor {
 
 // embeded git-diff details container
 .git-diff-details-outer {
-  // background-color: @base-background-color;
+  background-color: @base-background-color;
   width: 100%;
   .git-diff-details-main-panel {
     position: relative;
@@ -56,7 +48,6 @@ atom-text-editor {
     .line {
       &.git-diff-details-old-highlighted {
         background-color: rgba(232, 120, 120, 0.1) !important;
-        .hide-invisibles();
       }
       &.git-diff-details-old-flat {
         .git-diff-style(rgba(232, 120, 120, 0.7));
